base.css: prevent slight horizontal scrolling (important if keys are used)

--- a/base/static/base.css
+++ b/base/static/base.css
@@ -48,6 +48,9 @@ html, body {
     height:100%;
     width:98%;
     font-size: var(--font-size-all);
+
+    /* prevent horizontal scrolling */
+    overflow-x: hidden;
 }
 
 
